# sequoia-chameleon-gnupg

./: .gitlab-ci.yml  Cargo.toml  LICENSE.txt  NEWS  README.md  build.rs  gpg-sq-parcimonie.service
common/: Cargo.toml  argparse.rs  homedir.rs  lib.rs  macros.rs  utils.rs
common/argparse/: options.rs
debian/: build-deb  changelog  control  rules
examples/: explain-with-colons.rs
gpg-recorder/: Cargo.toml  gpg.option.inc  macros.rs
shim-debug/: gpg  gpgv
shim-recorder/: gpg2  gpgconf  gpgv
shim-release/: gpg2  gpgconf  gpgv
src/: Makefile  agent.rs  argparse.rs  assert_pubkey_algo.rs  babel.rs  clock.rs  colons.rs  commands.rs  common.rs  compliance.rs  control.rs  decrypt.rs  delete_keys.rs  dirmngr.option.c.fragment  dirmngr.option.inc  dirmngr.rs  encrypt.rs  error_codes.inc  error_codes.rs  export.rs  export_ssh_key.rs  filter.rs  flags.rs  generate_key.rs  gnupg_interface.rs  gpg-recorder.rs  gpg.option.gpg.c.fragment  gpg.option.implicit  gpg.option.inc  gpg.option.oxidize  gpg.rs  gpg_args.rs  gpgv.rs  gpgv_args.rs  import.rs  interactive.rs  keydb.rs  keyserver.rs  list_keys.rs  list_packets.rs  (+16 more)
src/argparse/: flags.rs  mod.rs  options.rs  utils.rs
src/common/: cert.rs
src/trust/: always.rs  cert.rs  db.rs  model.rs  pgp.rs  tofu_pgp.rs
tests/: gpg.rs  gpgv.rs  integration.rs  null-policy.toml
tests/gpg/: decrypt.rs  encrypt.rs  export.rs  export_ssh_key.rs  generate_key.rs  import.rs  list_keys.rs  list_packets.rs  migrate.rs  print_mds.rs  quick.rs  sign.rs  status_fd.rs  trust_models.rs  verify.rs  version.rs
tests/gpg/decrypt/: a_cert.json  empty.json  locked_loopback.json  simple.cbor  simple.json  symmetric_unwrap.json
tests/gpg/decrypt/general_purpose/: Cv25519.cbor  Cv25519.json  P256.cbor  P256.json  P384.cbor  P384.json  P521.cbor  P521.json  RSA2k.cbor  RSA2k.json  RSA3k.cbor  RSA3k.json  RSA4k.cbor  RSA4k.json
tests/gpg/decrypt/symmetric/: AES-128.json  AES-192.json  AES-256.json  Blowfish.json  Twofish.json
tests/gpg/encrypt/: fingerprint_recipient.json  no_encryption_subkey.cbor  no_encryption_subkey.json  recipient_file.json
tests/gpg/encrypt/general_purpose/: Cv25519.cbor  Cv25519.json  P256.cbor  P256.json  P384.cbor  P384.json  P521.cbor  P521.json  RSA2k.cbor  RSA2k.json  RSA3k.cbor  RSA3k.json  RSA4k.cbor  RSA4k.json
tests/gpg/export/: local_sigs.json
tests/gpg/export/general_purpose/: Cv25519.json  P256.json  P384.json  P521.json  RSA2k.json  RSA3k.json  RSA4k.json
tests/gpg/export_ssh_key/: no_authentication_subkey.json
tests/gpg/export_ssh_key/ciphersuite/: Cv25519.json  P256.json  P384.json  P521.json  RSA2k.json  RSA3k.json  RSA4k.json
tests/gpg/generate_key/: comments_and_directives.json  creation_time.json  dsa_rsa2k_by_id.json  ecdsa_ecdh_nistp256.json  eddsa_ecdh_25519.json  keyserver.json  preferences.json  rsa2k_rsa2k.json  rsa2k_rsa2k_locked.json  usage.json
tests/gpg/import/: cert_revocation.json  local_sigs.json
tests/gpg/import/test_key/: convert-sk-to-kp-Cv25519-human-readable.json  convert-sk-to-pk-Cv25519-human-readable.json  convert-sk-to-pk-Cv25519-machine-readable.json  convert-sk-to-pk-P256-human-readable.json  convert-sk-to-pk-P256-machine-readable.json  convert-sk-to-pk-P384-human-readable.json  convert-sk-to-pk-P384-machine-readable.json  convert-sk-to-pk-P521-human-readable.json  convert-sk-to-pk-P521-machine-readable.json  import-show-Cv25519-human-readable.json  (+19 more)
tests/gpg/list_keys/: designated_revoker.json  disabled.cbor  disabled.json  dsa_elgamal.json  empty.cbor  empty.json  expired.cbor  expired.json  expired_subkey.cbor  expired_subkey.json  locked.json  notations.json  policy_url.json  queries.cbor  queries.json  revoked.cbor  revoked.json  show_keys.json  unusable_uids.json  valid.cbor  valid.json
tests/gpg/list_packets/: compressed_data.json  encrypted.json  inline_signed.json  key_packets.json  literal.json  locked_key.json  marker.json  mdc.json  signature.json  trust.json  user_attribute.json  userid.json
tests/gpg/migrate/: migration_from_secring.json
tests/gpg/print_mds/: print_md_md5.json  print_md_ripemd160.json  print_md_sha1.json  print_md_sha224.json  print_md_sha256.json  print_md_sha384.json  print_md_sha512.json  print_md_star.json  print_mds.json
tests/gpg/quick/: add_key_all_dashes.json  add_key_cv25519.json  add_key_default.json  add_key_default_auth.json  add_key_default_default.json  add_key_default_default_1y.json  add_key_default_default_dash.json  add_key_default_default_iso_date.json  add_key_default_default_iso_time.json  add_key_default_default_never.json  add_key_default_default_none.json  add_key_default_encr.json  add_key_default_encrypt.json  add_key_default_sign.json  add_key_dsa.json  add_key_ed25519.json  add_key_future_default.json  add_key_nistp256.json  add_key_no_arg.json  add_key_rsa.json  add_key_rsa2048.json  add_key_rsa_encrypt_sign.json  add_key_rsa_encrypt_space_sign.json  add_uid.json  generate_key_all_dashes.json  generate_key_cv25519.json  generate_key_default.json  generate_key_default_auth.json  generate_key_default_default.json  generate_key_default_default_1y.json  generate_key_default_default_dash.json  generate_key_default_default_iso_date.json  generate_key_default_default_iso_time.json  generate_key_default_default_never.json  generate_key_default_default_none.json  generate_key_default_encr.json  generate_key_default_encrypt.json  generate_key_default_sign.json  generate_key_dsa.json  generate_key_ed25519.json  (+8 more)
tests/gpg/sign/: no_signing_subkey.json  signers_are_deduplicated.json
tests/gpg/trust_models/: always.cbor  always.json
tests/gpg/verify/: basic.cbor  basic.json  extended.cbor  extended.json  hash_algos.cbor  hash_algos.json  show_uid_validity.json  signature_types.cbor  signature_types.json  weak_hash_algos.cbor  weak_hash_algos.json  wrong_key.cbor  wrong_key.json
tests/gpg/version/: dump_options.cbor  dump_options.json  help.cbor  help.json  version.cbor  version.json
tests/integration/: debsig-verify-0.30.json  debsig-verify-0.30.tar.bz2  password-store-git.json  password-store-git.tar.bz2
(+71 files in other folders)
