[package]
name = "sequoia-chameleon-gnupg"
description = "Sequoia's reimplementation of the GnuPG interface"
version = "0.1.1"
authors = ["Justus Winter <justus@sequoia-pgp.org>"]
edition = "2021"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "command-line-utilities"]
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/sequoia-chameleon-gnupg"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia-chameleon-gnupg"
readme = "README.md"
include = ["src", "tests", "AUTHORS.GnuPG", "!/integration/**"]

[dependencies]
anyhow = "1"
base64 = "0.13"
buffered-reader = "1"
chrono = "0.4"
dirs = "4"
filetime = "0.2"
futures = "0.3"
home-dir = "0.1"
libc = "0.2"
memchr = "2"
once_cell = "1.17"
openpgp-cert-d = "0.1"
rayon = "1"
sequoia-openpgp = "1.13"
sequoia-openpgp-mt = "0.1"
sequoia-policy-config = "0.5"
sequoia-ipc = "0.30.1"
sequoia-wot = "0.4"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.19", features = [ "rt-multi-thread", "io-util", "net" ] }

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
diff = "0.1"
edit-distance = "2"
lazy_static = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
tempfile = "3"

[[bin]]
name = "gpg-sq"
path = "src/gpg.rs"

[[bin]]
name = "gpgv-sq"
path = "src/gpgv.rs"
