[package]
name = "sequoia-chameleon-gnupg"
description = "Sequoia's reimplementation of the GnuPG interface"
version = "0.3.2"
authors = ["Justus Winter <justus@sequoia-pgp.org>"]
edition = "2021"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "command-line-utilities"]
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/sequoia-chameleon-gnupg"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia-chameleon-gnupg"
readme = "README.md"
include = ["src", "tests", "AUTHORS.GnuPG", "LICENSE.txt", "README.md", "!/integration/**"]

[dependencies]
anyhow = "1"
base64 = "0.21"
buffered-reader = "1"
chrono = "0.4"
daemonize = "0.5"
dirs = "5"
fd-lock = { version = "3", default-features = false }
filetime = "0.2"
futures = "0.3"
home-dir = "0.1"
indexmap = "2"
libc = "0.2"
memchr = "2"
once_cell = "1.17"
openpgp-cert-d = "0.1"
openssh-keys = { version = "0.6", default-features = false }
percent-encoding = "2"
rand = "0.8"
rand_distr = { version = "0.4", default-features = false }
rayon = "1"
reqwest = { version = "0.11", features = ["socks"] }
sequoia-cert-store = "0.3"
sequoia-openpgp = { version = "1.16", default-features = false, features = ["compression"] }
sequoia-openpgp-mt = "0.1"
sequoia-policy-config = "0.6"
sequoia-ipc = "0.30.1"
sequoia-net = "0.27"
sequoia-wot = "0.8"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.19", features = [ "rt-multi-thread", "io-util", "net" ] }
zbase32 = "0.1.2"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
diff = "0.1"
edit-distance = "2"
interprocess = { version = "1", default-features = false }
lazy_static = "1"
ntest = "0.9"
regex = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
stfu8 = "0.2"
tempfile = "3"

[[bin]]
name = "gpg-sq"
path = "src/gpg.rs"

[[bin]]
name = "gpgv-sq"
path = "src/gpgv.rs"

[profile.release]
debug = true

[features]
default = ["crypto-nettle"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-openssl = ["sequoia-openpgp/crypto-openssl"]
crypto-botan = ["sequoia-openpgp/crypto-botan"]
crypto-botan2 = ["sequoia-openpgp/crypto-botan2"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
