[package]
name = "sequoia-chameleon-gnupg"
description = "Sequoia's reimplementation of the GnuPG interface"
version = "0.5.1"
authors = ["Justus Winter <justus@sequoia-pgp.org>"]
edition = "2021"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "command-line-utilities"]
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/sequoia-chameleon-gnupg"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia-chameleon-gnupg"
readme = "README.md"
include = ["src", "tests", "AUTHORS.GnuPG", "LICENSE.txt", "README.md", "!/integration/**"]
rust-version = "1.70"

[dependencies]
anyhow = "1"
base64 = "0.21"
buffered-reader = "1"
chrono = "0.4"
daemonize = "0.5"
dirs = "5"
fd-lock = { version = ">= 3, < 5", default-features = false }
filetime = "0.2"
futures = "0.3"
indexmap = "2"
interprocess = { version = "1", default-features = false }
libc = "0.2"
memchr = "2"
openssh-keys = { version = "0.6", default-features = false }
percent-encoding = "2"
rand = "0.8"
rand_distr = { version = "0.4", default-features = false }
rayon = "1"
reqwest = { version = "0.11", features = ["socks"] }
rpassword = "7"
sequoia-cert-store = "0.5"
sequoia-gpg-agent = "0.1"
sequoia-openpgp = { version = "1.19", default-features = false, features = ["compression"] }
sequoia-openpgp-mt = "0.1"
sequoia-policy-config = "0.6"
sequoia-ipc = "0.33"
sequoia-net = "0.28"
sequoia-wot = "0.10"
shellexpand = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.19", features = [ "rt-multi-thread", "io-util", "net", "process", "io-std", "fs" ] }
zbase32 = "0.1.2"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bzip2 = { version = "0.4", default-features = false }
diff = "0.1"
editdistancek = "1"
interprocess = { version = "1", default-features = false }
histo = "1"
ntest = "0.9"
regex = "1"
reqwest = "0.11"
serde_with = "3"
stfu8 = "0.2"
tar = { version = "0.4", default-features = false }
tempfile = "3"

[[bin]]
name = "gpg-sq"
path = "src/gpg.rs"

[[bin]]
name = "gpgv-sq"
path = "src/gpgv.rs"

[[bin]]
name = "gpg-recorder"
path = "src/gpg-recorder.rs"
required-features = ["the-recorder-steals-secrets-and-i-wont-package-it-in-slash-bin"]

[profile.release]
debug = true

[features]
default = ["crypto-nettle"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
crypto-openssl = ["sequoia-openpgp/crypto-openssl"]
crypto-botan = ["sequoia-openpgp/crypto-botan"]
crypto-botan2 = ["sequoia-openpgp/crypto-botan2"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
the-recorder-steals-secrets-and-i-wont-package-it-in-slash-bin = []
