[package]
name = "sequoia-chameleon-gnupg-recorder"
version = "0.1.0"
authors = ["Justus Winter <justus@sequoia-pgp.org>"]
edition = "2021"
keywords = ["cryptography", "openpgp", "pgp", "encryption", "signing"]
categories = ["cryptography", "authentication", "command-line-utilities"]
license = "GPL-3.0-or-later"
documentation = "https://docs.rs/sequoia-chameleon-gnupg-common"
homepage = "https://sequoia-pgp.org/"
repository = "https://gitlab.com/sequoia-pgp/sequoia-chameleon-gnupg"
rust-version = "1.70"
publish = false

[dependencies]
anyhow = "1"
buffered-reader = "1"
interprocess = { version = "1", default-features = false }
libc = "0.2"
sequoia-chameleon-gnupg-common = { path = "../common" }
sequoia-openpgp = { version = "1.19", default-features = false, features = ["crypto-nettle"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.19", features = [ "rt-multi-thread", "io-util", "net", "process", "io-std", "fs", "time", "macros" ] }

[[bin]]
name = "gpg-recorder"
path = "gpg-recorder.rs"